# no.1-production-ready-platform

./: .gitignore  .npmrc.example  CONTRIBUTING.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: backend-standard.md  consume-in-ci.md
templates/backend-service/: .env.example  Dockerfile  pyproject.toml
templates/backend-service/app/: main.py  readiness.py  settings.py
templates/backend-service/app/api/: router.py
templates/backend-service/app/features/example/: router.py
templates/backend-service/tests/: test_health.py
