[project]
# テンプレート: コピー後に name を production-ready-<app>-backend へ変更する。
name = "production-ready-service-backend"
version = "0.1.0"
description = "FastAPI backend service built on production-ready-backend-core."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.121,<1.0",
  "starlette>=1.0.1,<2.0",
  "uvicorn[standard]>=0.37",
  "gunicorn>=23,<24",
  "pydantic>=2.11",
  "pydantic-settings>=2.7",
  "python-dotenv>=1.1",
  "httpx==0.28.1",
  "python-json-logger>=4.0",
  "prometheus-client>=0.24",
  "production-ready-backend-core",
  # 業務で OCI / Oracle を使う場合は各サービスで追加する:
  # "oci>=2.168", "oracledb>=3.4",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "black>=25.1",
  "mypy>=1.14",
  "bandit>=1.8",
  "pip-audit>=2.9",
]

[tool.uv.sources]
# テンプレを <app>/backend へ展開したときの相対パス。
production-ready-backend-core = { path = "../../no.1-production-ready-platform/packages/backend_core", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
